<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.EditIntakeDiaryEntry">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/EntryEditorTitle"
            android:layout_width="221dp"
            android:layout_height="78dp"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="95dp"
            android:layout_marginRight="95dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Edit Entry"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewSubstanceName"
            android:layout_width="306dp"
            android:layout_height="28dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="13dp"
            android:text="Substance Name" />

        <EditText
            android:id="@+id/editTextSubstanceName"
            android:layout_width="303dp"
            android:layout_height="49dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textViewSubstanceType"
            android:layout_width="302dp"
            android:layout_height="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="48dp"
            android:text="Substance Type" />

        <Spinner
            android:id="@+id/spinnerSubstanceType"
            android:layout_width="302dp"
            android:layout_height="43dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="30dp"
            android:entries="@array/type_array" />

        <TextView
            android:id="@+id/textViewSubstanceAmount"
            android:layout_width="300dp"
            android:layout_height="29dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="9dp"
            android:text="Substance Amount" />

        <EditText
            android:id="@+id/editTextSubstanceAmount"
            android:layout_width="301dp"
            android:layout_height="47dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="394dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_saveEntryEdit"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAVE" />

        <Button
            android:id="@+id/button_entryDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DELETE" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>