...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/selectDateRangeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_marginStart="88dp"
                    android:layout_marginTop="48dp"
                    android:text="Select date range"
                    app:layout_constraintStart_toStartOf="parent"
...
