...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/AboutAppTitle"
                android:layout_width="399dp"
                android:layout_height="49dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="About myDrugPal"
...
